
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pthread_t ;


 int notify_thread_func ;
 char* orig_name ;
 int pthread_create (int *,int *,int ,int *) ;
 int pthread_join (int ,int *) ;
 int snprintf (char*,int,char*,char*) ;
 int system (char*) ;
 int trigger_rename_open ;

void main(void)
{
    pthread_t notify_thread[4];
    pthread_t rename_thread;
    int i = 0;

    char buf[1024];
    snprintf(buf, sizeof buf, "touch test_dir/%s", orig_name);
    system("rm -rf /data/local/tmp/test_dir ; mkdir test_dir");
    system(buf);

    for ( i ; i < 2; i++ ) {
        pthread_create(&notify_thread[i],
                       ((void*)0),
                       notify_thread_func,
                       ((void*)0));
    }


    pthread_create(&rename_thread, ((void*)0), trigger_rename_open, ((void*)0));

    pthread_join(rename_thread, ((void*)0));
    for ( i = 0; i < 2; i++ )
        pthread_join(notify_thread[i], ((void*)0));

}
